@startuml SHOP_CO_ERD

skinparam linetype ortho
skinparam roundcorner 8

entity "User" as user {
  * **id** : bigint <<PK>>
  --
  **email** : varchar <<unique>>
  **first_name** : varchar
  **last_name** : varchar
  **password** : varchar
  **is_active** : boolean
  **date_joined** : timestamptz
}

entity "Category" as category {
  * **id** : bigint <<PK>>
  --
  **name** : varchar
  **slug** : varchar <<unique>>
}

entity "Product" as product {
  * **id** : bigint <<PK>>
  --
  * **category_id** : bigint <<FK>>
  **name** : varchar
  **slug** : varchar <<unique>>
  **description** : text <<nullable>>
  **image_url** : varchar <<nullable>>
  **price** : decimal
  **original_price** : decimal <<nullable>>
  **discount_label** : varchar <<nullable>>
  **rating** : decimal(3,2) <<default 0>>
  **stock** : int
  **created_at** : timestamptz
  **updated_at** : timestamptz
}

entity "Cart" as cart {
  * **id** : bigint <<PK>>
  --
  * **user_id** : bigint <<FK, unique>>
  **subtotal_amount** : decimal(12,2) <<default 0>>
  **discount_amount** : decimal(12,2) <<default 0>>
  **shipping_amount** : decimal(12,2) <<default 0>>
  **total_amount** : decimal(12,2) <<default 0>>
  **updated_at** : timestamptz
}

entity "CartItem" as cart_item {
  * **id** : bigint <<PK>>
  --
  * **cart_id** : bigint <<FK>>
  * **product_id** : bigint <<FK>>
  **quantity** : int <<default 1>>
}

user ||--|| cart : "owns"
category ||--o{ product : "contains"
cart ||--o{ cart_item : "has lines"
product ||--o{ cart_item : "in cart"

@enduml